# TelomereRepeatLoci

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  config_snakemake_TelomereRepeatLoci_example.yaml  main.py  pyproject.toml  run_telomere_repeat_loci.py
src/: add_mate_mapq.py  count_discordant_reads.py  find_discordant_reads.py  find_fusion_reads.py  get_candidate_regions.py  get_consensus.py  main.py  make_bed_for_visualization.py  predict_insertion_sites.py  visualize_telomere_insertions.py
src/pipeline/: __init__.py  tables.py
src/telomererepeatloci/: __init__.py  add_mate_mapq.py  count_discordant_reads.py  find_discordant_reads.py  find_fusion_reads.py  get_candidate_regions.py  get_consensus.py  main.py  make_bed_for_visualization.py  predict_insertion_sites.py  version.py  visualize_telomere_insertions.py
tests/: debug_wrapper.py  simple_debug.py  test_simulated_telomeric_insertion.py
