[project]
name = "telomererepeatloci"
version = "0.1.0"
description = "Analyze telomere repeat loci in genomic sequences. Belongs to the TelomereHunter2 toolkit."
authors = [
    { name = "Ferdinand Popp", email = "" },
    { name = "Lina Sieverling", email = "" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pysam>=0.23.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "pre-commit>=4.5.1",
]
