[project]
name = "telomererepeatloci"
version = "0.1.0"
description = "Analyze telomere repeat loci in genomic sequences."
readme = "README.md"
authors = [
    { name = "Ferdinand Popp" },
    { name = "Lina Sieverling" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pysam>=0.22",
]

[project.scripts]
telomere-repeat-loci = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pipeline", "telomererepeatloci"]
py-modules = [
    "add_mate_mapq",
    "count_discordant_reads",
    "find_discordant_reads",
    "find_fusion_reads",
    "get_candidate_regions",
    "get_consensus",
    "main",
    "make_bed_for_visualization",
    "predict_insertion_sites",
    "visualize_telomere_insertions",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.6",
    "pre-commit>=3.6",
]
