[project]
name = "telomererepeatloci"
version = "0.1.0"
description = "Analyze telomere repeat loci in genomic sequences."
readme = "README.md"
authors = [
    { name = "Ferdinand Popp" },
    { name = "Lina Sieverling" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pysam>=0.22",
]

[project.scripts]
telomere-repeat-loci = "telomererepeatloci.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["telomererepeatloci", "pipeline"]

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.6",
    "pre-commit>=3.6",
]
